<resources>
    <string name="app_name">Turma 1 DH</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_gender">Sexo</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_day">Dia</string>
    <string name="hint_month">Mês</string>
    <string name="hint_year">Ano</string>
    <string name="help_required">obrigatório</string>
    <string name="salve">salvar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meu_home">home</string>
    <string name="menu_movies">movies</string>
    <string name="menu_about">about</string>
    <string name="payments">Payments</string>
    <string name="text_label_1">Tab 1</string>
    <string name="text_label_2">Tab 2</string>
    <string name="text_label_3">Tab 3</string>
</resources>